# docs/web/api/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.1.1
 info:
   description: Title
   title: Title
@@ -6,56 +6,14 @@ info:
 servers:
 - url: /
 paths:
-  /chains/media-storage/v1/media:
+  /test:
     post:
-      description: Upload media to the server
-      requestBody:
-        content:
-          application/vnd.api+json:
-            schema:
-              $ref: '#/components/schemas/UploadMedia'
-        required: true
+      description: Test
       responses:
         "201":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/Media'
-          description: Media uploaded successfully
-        "400":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/Errors'
-          description: One of the parameters is invalid. Refer to the response body
-            for details.
-        "401":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/Errors'
-          description: You must provide a valid authorization params.
-        "404":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/Errors'
-          description: Requested resource does not exist.
-        "409":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/Errors'
-          description: Forbidden
-        "500":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/components/schemas/Errors'
-          description: Internal server error
-      summary: Upload Media
+          description: successfully
       tags:
-      - Media
+      - Test
   /chains/media-storage/v1/media/:
     delete:
       description: Delete media from the server
@@ -72,59 +30,87 @@ paths:
         "204":
           description: Media deleted successfully
         "400":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/400'
+          $ref: '#/components/responses/InvalidParameter'
         "401":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/401'
+          $ref: '#/components/responses/InvalidAuth'
         "403":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/409'
+          $ref: '#/components/responses/Forbidden'
         "404":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/404'
+          $ref: '#/components/responses/NotFound'
         "500":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/500'
+          $ref: '#/components/responses/InternalError'
       summary: Delete Media
       tags:
       - Media
-  /chains/media-storage/v1/media-rules/:
+    post:
+      description: Upload media to the server
+      requestBody:
+        content:
+          application/vnd.api+json:
+            schema:
+              $ref: '#/components/schemas/UploadMedia'
+        required: true
+      responses:
+        "201":
+          content:
+            application/vnd.api+json:
+              schema:
+                $ref: '#/components/schemas/Media'
+          description: Media uploaded successfully
+        "400":
+          $ref: '#/components/responses/InvalidParameter'
+        "401":
+          $ref: '#/components/responses/InvalidAuth'
+        "404":
+          $ref: '#/components/responses/NotFound'
+        "409":
+          $ref: '#/components/responses/Forbidden'
+        "413":
+          $ref: '#/components/responses/InvalidParameter'
+        "500":
+          $ref: '#/components/responses/InternalError'
+      summary: Upload Media
+      tags:
+      - Media
+  /chains/media-storage/v1/media-rules/{resource}:
     delete:
       description: Delete media Rules
+      parameters:
+      - description: Идентификатор ресурсной записи
+        explode: false
+        in: path
+        name: resource
+        required: true
+        schema:
+          type: string
+        style: simple
       responses:
         "204":
           description: Media Rules deleted successfully
         "400":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/400'
-          description: Bad Request
+          $ref: '#/components/responses/InvalidParameter'
         "401":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/401'
-          description: Unauthorized
+          $ref: '#/components/responses/InvalidAuth'
         "403":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/409'
-          description: User Not Allowed to delete media rules
+          $ref: '#/components/responses/Forbidden'
         "404":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/404'
-          description: Not Found Media Rules
+          $ref: '#/components/responses/NotFound'
         "500":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/500'
-          description: Internal Server Error
+          $ref: '#/components/responses/InternalError'
       summary: Delete Media Rules
       tags:
       - Media Rules
     get:
       description: Get media Rules
+      parameters:
+      - description: Идентификатор ресурсной записи
+        explode: false
+        in: path
+        name: resource
+        required: true
+        schema:
+          type: string
+        style: simple
       responses:
         "201":
           content:
@@ -133,28 +119,34 @@ paths:
                 $ref: '#/components/schemas/MediaRules'
           description: Media Rules retrieved successfully
         "400":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/400'
-          description: Bad Request
+          $ref: '#/components/responses/InvalidParameter'
         "404":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/404'
-          description: Not Found Media Rules
+          $ref: '#/components/responses/NotFound'
         "500":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/500'
-          description: Internal Server Error
+          $ref: '#/components/responses/InternalError'
       summary: Get Media Rules
       tags:
       - Media Rules
+    parameters:
+    - description: Идентификатор ресурсной записи
+      explode: false
+      in: path
+      name: resource
+      required: true
+      schema:
+        type: string
+      style: simple
     patch:
       description: Update media Rules
+      parameters:
+      - description: Идентификатор ресурсной записи
+        explode: false
+        in: path
+        name: resource
+        required: true
+        schema:
+          type: string
+        style: simple
       requestBody:
         content:
           application/vnd.api+json:
@@ -169,40 +161,29 @@ paths:
                 $ref: '#/components/schemas/MediaRules'
           description: Media Rules created successfully
         "400":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/400'
-          description: Bad Request
+          $ref: '#/components/responses/InvalidParameter'
         "401":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/401'
-          description: Unauthorized
+          $ref: '#/components/responses/InvalidAuth'
         "403":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/409'
-          description: User Not Allowed to create media rules
+          $ref: '#/components/responses/Forbidden'
         "404":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/404'
-          description: Not Found Media Rules
+          $ref: '#/components/responses/NotFound'
         "500":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/500'
-          description: Internal Server Error
+          $ref: '#/components/responses/InternalError'
       summary: Update Media Rules
       tags:
       - Media Rules
     post:
       description: Create media Rules
+      parameters:
+      - description: Идентификатор ресурсной записи
+        explode: false
+        in: path
+        name: resource
+        required: true
+        schema:
+          type: string
+        style: simple
       requestBody:
         content:
           application/vnd.api+json:
@@ -217,35 +198,80 @@ paths:
                 $ref: '#/components/schemas/MediaRules'
           description: Media Rules created successfully
         "400":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/400'
+          $ref: '#/components/responses/InvalidParameter'
         "401":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/401'
+          $ref: '#/components/responses/InvalidAuth'
         "403":
-          $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/409'
+          $ref: '#/components/responses/Forbidden'
         "409":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/400'
-          description: Media Rules already exists
+          $ref: '#/components/responses/InvalidParameter'
         "500":
-          content:
-            application/vnd.api+json:
-              schema:
-                $ref: '#/paths/~1chains~1media-storage~1v1~1media/post/responses/500'
-          description: Internal Server Error
+          $ref: '#/components/responses/InternalError'
       summary: Create Media Rules
       tags:
       - Media Rules
 components:
+  responses:
+    InvalidParameter:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: One of the parameters is invalid. Refer to the response body for
+        details.
+    InvalidAuth:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: You must provide a valid authorization params.
+    NotFound:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: Requested resource does not exist.
+    Forbidden:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: Forbidden
+    InternalError:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: Internal server error
+    Conflict:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: Conflict
+    TooManyRequests:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: Too many requests
+    UnsupportedMediaType:
+      content:
+        application/vnd.api+json:
+          schema:
+            $ref: '#/components/schemas/Errors'
+      description: Unsupported Media Type
   schemas:
+    MediaCollection:
+      properties:
+        data:
+          $ref: '#/components/schemas/MediaCollection_data'
     Media:
       properties:
         data:
           $ref: '#/components/schemas/MediaData'
       required:
       - data
-      type: object
     MediaData:
       properties:
         id:
@@ -261,7 +287,6 @@ components:
       - attributes
       - id
       - type
-      type: object
     MediaAttributes:
       properties:
         format:
@@ -304,29 +329,18 @@ components:
       - resource_id
       - size
       - url
-      type: object
-    MediaCollection:
-      properties:
-        data:
-          $ref: '#/components/schemas/MediaCollection_data'
-      required:
-      - data
-      - links
-      type: object
     UploadMedia:
       properties:
         data:
           $ref: '#/components/schemas/UploadMedia_data'
       required:
       - data
-      type: object
     MediaRules:
       properties:
         data:
           $ref: '#/components/schemas/MediaRulesData'
       required:
       - data
-      type: object
     MediaRulesData:
       properties:
         id:
@@ -342,7 +356,6 @@ components:
       - attributes
       - id
       - type
-      type: object
     MediaRulesAttributes:
       properties:
         extensions:
@@ -373,29 +386,24 @@ components:
       - max_size
       - roles
       - updated_at
-      type: object
     CreateMediaRules:
       properties:
         data:
           $ref: '#/components/schemas/CreateMediaRules_data'
       required:
       - data
-      type: object
     UpdateMediaRules:
       properties:
         data:
           $ref: '#/components/schemas/UpdateMediaRules_data'
       required:
       - data
-      type: object
     MediaRulesCollection:
       properties:
         data:
           $ref: '#/components/schemas/MediaRulesCollection_data'
       required:
       - data
-      - links
-      type: object
     Errors:
       description: Standard JSON:API error
       properties:
@@ -406,28 +414,25 @@ components:
           type: array
       required:
       - errors
-      type: object
     MediaCollection_data_attributes:
       properties:
         data:
           items:
-            $ref: '#/components/schemas/MediaRulesData'
+            $ref: '#/components/schemas/MediaData'
           type: array
       required:
       - data
-      type: object
     MediaCollection_data:
       properties:
         type:
           enum:
-          - media_rules_collection
+          - media_collection
           type: string
         attributes:
           $ref: '#/components/schemas/MediaCollection_data_attributes'
       required:
       - attributes
       - type
-      type: object
     UploadMedia_data_attributes:
       properties:
         resource:
@@ -447,7 +452,6 @@ components:
       - owner_id
       - resource
       - resource_id
-      type: object
     UploadMedia_data:
       properties:
         type:
@@ -459,7 +463,6 @@ components:
       required:
       - attributes
       - type
-      type: object
     CreateMediaRules_data_attributes:
       properties:
         extensions:
@@ -480,7 +483,6 @@ components:
       - extensions
       - max_size
       - roles
-      type: object
     CreateMediaRules_data:
       properties:
         id:
@@ -496,7 +498,6 @@ components:
       - attributes
       - id
       - type
-      type: object
     UpdateMediaRules_data_attributes:
       properties:
         extensions:
@@ -513,7 +514,6 @@ components:
             description: Roles associated with the media rules
             type: string
           type: array
-      type: object
     UpdateMediaRules_data:
       properties:
         id:
@@ -529,28 +529,25 @@ components:
       - attributes
       - id
       - type
-      type: object
     MediaRulesCollection_data_attributes:
       properties:
         data:
           items:
-            $ref: '#/components/schemas/MediaData'
+            $ref: '#/components/schemas/MediaRulesData'
           type: array
       required:
       - data
-      type: object
     MediaRulesCollection_data:
       properties:
         type:
           enum:
-          - media_collection
+          - media_rules_collection
           type: string
         attributes:
           $ref: '#/components/schemas/MediaRulesCollection_data_attributes'
       required:
       - attributes
       - type
-      type: object
     Errors_errors_inner_meta:
       properties:
         request_id:
@@ -567,7 +564,6 @@ components:
       required:
       - request_id
       - timestamp
-      type: object
     Errors_errors_inner:
       properties:
         status:
@@ -603,4 +599,3 @@ components:
       - meta
       - status
       - title
-      type: object
